<resources>
    <string name="app_name">ChatApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="player_name">Nombre de jugador</string>
    <string name="login">Ingresar</string>
    <string name="chats">Chats</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="enter_message">Ingresar Mensaje</string>
    <string name="send">Enviar</string>
    <string name="roll_d20">Tirar dado de 20</string>
    <string name="delete_session">Eliminar sesion</string>
    <string name="roll_d4">Tirar dado de 4</string>
    <string name="roll_d6">Tirar dado de 6</string>
    <string name="roll_d8">Tirar dado de 8</string>
    <string name="roll_d10">Tirar dado de 10</string>
    <string name="roll_d12">Tirar dado de 12</string>
</resources>
